<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivityView">

    <com.pw.codeset.weidgt.ActivityHeaderView
        android:id="@+id/main_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title_text="@string/main_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/main_to_bazier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bezier_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_header"/>

    <Button
        android:id="@+id/main_to_touchview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/touch_activity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_to_bazier"
        android:onClick="toTouchView"/>
    <Button
        android:id="@+id/main_to_loginmvp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_mvp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_to_touchview"
        android:onClick="toLoginMvp"/>



</androidx.constraintlayout.widget.ConstraintLayout>